--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h2 align = "middle">Lebenslauf</h2>
-        <img align=right height = 150 src = "./assets/20181018_Rahmen_19.jpg" alt ="Foto von Alexander Schulz" />
+        <img align=right height = 200 src = "./assets/20181018_Rahmen_19.jpg" alt ="Foto von Alexander Schulz" />
         
         <h3>Werdegang</h3>
         <ul>
@@ -45,8 +45,11 @@
             <li>Englisch Verhandlungssicher</li>
         </ul>
         <hr />
-        <h4 align = middle><a href ="./assets/hobby.html">About Me</a></h4>
+        <h4 align = middle><a href ="assets/about.html">About Me</a></h4>
         <h4 align = middle><a  href = "./assets/contact.html">Contact Me</a></h4>
+        <footer>
+            <p>Alexander Schulz ©PlantBased</p>
+        </footer>
 
 
 
